deploying-php-guestbook-application-with-redis/frontend-deployment-and-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  labels:
    app: guestbook
spec:
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
        - name: php-redis
          image: gcr.io/google-samples/gb-frontend:v4
          ports:
            - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  selector:
    app: guestbook
    tier: frontend
  ports:
    - port: 80
