deploying-php-guestbook-application-with-redis/redis-slave-deployment-and-service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis-slave-deployment
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: slave
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
        - name: slave
          image: gcr.io/google_samples/gb-redisslave:v1
          ports:
            - containerPort: 6379
---
kind: Service
apiVersion: v1
metadata:
  name: redis-slave-service
spec:
  selector:
    app: redis
    role: slave
    tier: backend
  ports:
    - port: 6379
